--- a/PFinalCine/PFinalCine/PFinalCine/PFinalCine.csproj
+++ b/PFinalCine/PFinalCine/PFinalCine/PFinalCine.csproj
@@ -16,7 +16,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Reserva.xaml.cs">
+      <DependentUpon>Reserva.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Cartelera.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Menu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Reserva.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
